[package]
name = "polygon-cdk-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow =  { version = "1.0" }
env_logger =  { version = "0.11" }
log =  { version = "0.4" }

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json =  { version = "1.0" }

ethers = { version = "2.0" }

bitcoin = { version = "0.31" }
